--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,23 @@
 		<java.version>1.8</java.version>
 		<start-class>com.example.demo1.Demo1Application</start-class>
 	</properties>
-
+	<developers>
+		<developer>
+			<id>alexej</id>
+			<name>Alexej Milkau</name>
+			<email>alexej.milkau@lhsystems.com</email>
+		</developer>
+	</developers>
+	<scm>
+		<connection>scm:git:https://github.com/amilkau/demo1.git</connection>
+		<developerConnection>scm:git:hhttps://github.com/amilkau/demo1.git</developerConnection>
+	</scm>
+	<distributionManagement>
+		<repository>
+			<id>nexus-releases</id>
+			<url>http://localhost:8091/nexus/content/repositories/releases</url>
+		</repository>
+	</distributionManagement>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -98,6 +114,10 @@
 						<classpathContainer>org.eclipse.jdt.USER_LIBRARY/TOMCAT_6.0.14_LIBRARY</classpathContainer>
 					</classpathContainers>
 				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
 			</plugin>
 		</plugins>
 	</build>
