--- a/release.properties
+++ b/release.properties
@@ -1,12 +1,12 @@
 #release configuration
-#Mon Aug 19 13:51:56 CEST 2019
+#Mon Aug 19 13:59:14 CEST 2019
 project.dev.com.example\:demo1=0.0.2-SNAPSHOT
 project.scm.com.example\:demo1.developerConnection=scm\:git\:hhttps\://github.com/amilkau/demo1.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 scm.tag=demo1-0.0.1
 project.scm.com.example\:demo1.connection=scm\:git\:https\://github.com/amilkau/demo1.git
 pushChanges=true
-scm.url=scm\:git\:https\://github.com/amilkau/demo1.git
+scm.url=scm\:git\:https\://amilkau:letmein120468@github.com/amilkau/demo1.git
 preparationGoals=clean verify
 project.rel.com.example\:demo1=0.0.1
 remoteTagging=true
@@ -14,5 +14,5 @@ projectVersionPolicyId=default
 scm.commentPrefix=[maven-release-plugin] 
 exec.snapshotReleasePluginAllowed=false
 exec.additionalArguments=-P artifactory
-completedPhase=run-preparation-goals
+completedPhase=scm-commit-release
 project.scm.com.example\:demo1.tag=HEAD
