--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -11,7 +9,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>demo1</artifactId>
-	<version>1.0.3-SNAPSHOT</version>
+	<version>1.0.3</version>
 	<packaging>war</packaging>
 	<name>demo1</name>
 	<description>Demo1 project for Spring Boot</description>
@@ -28,7 +26,8 @@
 	<scm>
 		<connection>${my.connection}</connection>
 		<developerConnection>${my.developer.connection}</developerConnection>
-	</scm>
+	  <tag>demo1-1.0.3</tag>
+  </scm>
 	<distributionManagement>
 		<repository>
 			<id>nexus-releases</id>
