--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>demo1</artifactId>
-	<version>1.0.9</version>
+	<version>1.0.10-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>demo1</name>
 	<description>Demo1 project for Spring Boot</description>
@@ -26,7 +26,7 @@
 	<scm>
 		<connection>${my.connection}</connection>
 		<developerConnection>${my.developer.connection}</developerConnection>
-		<tag>demo1-1.0.9</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<distributionManagement>
 		<repository>
